--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,7 @@ djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
 heroku==0.1.4
 idna==3.3
-numpy==1.21.2
-psycopg2-binary==2.9.1
+ßpsycopg2-binary==2.9.1
 pycairo==1.20.0
 PyGObject==3.38.0
 PyJWT==2.3.0
