--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,37 @@
 asgiref==3.4.1
+boto3==1.19.6
+botocore==1.22.6
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.7
 configparser==5.0.2
+cryptography==35.0.0
 dj-database-url==0.5.0
 Django==3.2.8
 django-cors-headers==3.10.0
+django-filter==21.1
 django-heroku==0.0.0
+django-storages==1.12.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
 heroku==0.1.4
 idna==3.3
+jmespath==0.10.0
+jwt==1.3.1
+Pillow==8.4.0
+psycopg2-binary==2.9.1
 pycairo==1.20.0
+pycparser==2.20
+PyGObject==3.38.0
 PyJWT==2.3.0
 PyQt5==5.15.2
+PyQt5_sip==4.19.25
 python-dateutil==1.5
 pytz==2021.3
 requests==2.26.0
+s3transfer==0.5.0
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
 whitenoise==5.3.0
