--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==3.2.8
 django-cors-headers==3.10.0
 django-filter==21.1
 django-heroku==0.0.0
+django-querysetsequence==0.14
 django-storages==1.12.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
@@ -22,12 +23,16 @@ hidapi==0.11.0.post2
 idna==3.3
 jmespath==0.10.0
 jwt==1.3.1
+numpy==1.21.2
 Pillow==8.4.0
 psutil==5.8.0
 psycopg2-binary==2.9.1
 pycairo==1.20.0
 pycparser==2.20
+PyGObject==3.38.0
 PyJWT==2.3.0
+PyQt5==5.15.2
+PyQt5-sip==12.9.0
 python-dateutil==1.5
 pytz==2021.3
 requests==2.26.0
@@ -36,5 +41,3 @@ six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
 whitenoise==5.3.0
-PyGObject==3.38.0
-
