--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
+cm-rgb==0.3.6
 configparser==5.0.2
 cryptography==35.0.0
 dj-database-url==0.5.0
@@ -26,8 +27,8 @@ numpy==1.21.2
 Pillow==8.4.0
 psutil==5.8.0
 psycopg2-binary==2.9.1
+pycairo==1.20.0
 pycparser==2.20
-PyGObject==3.38.0
 PyJWT==2.3.0
 PyQt5==5.15.2
 PyQt5-sip==12.9.0
